Fixes telegram button placement on mobile

--- a/Applications/landingPage/css/landingPageRedesign.css
+++ b/Applications/landingPage/css/landingPageRedesign.css
@@ -913,7 +913,7 @@ a:hover {
     }
 
     .socialMedia {
-        top: 12vh;
+        top: 15vh;
     }
 
     .socialMediaButton {
